# lql

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml  dist-workspace.toml  justfile  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
docs/: PRD.md  epic-update-contract.md  linear-schema.md  mdd_findings.md
docs/adr/: 0001-fast-iteration-builds.md  0002-keep-sccache-global.md
docs/bugs/: update-state-ignored-no-changes.md
docs/codex/: banner-pr-request.md  unlink-pr-request.md
docs/plans/: semantic-honesty-prd.md
src/: auth.rs  cli.rs  client.rs  config.rs  format.rs  lib.rs  main.rs  middleware.rs  queries.rs
src/commands/: comment.rs  context.rs  create.rs  doctor.rs  epic.rs  labels.rs  list.rs  mod.rs  project.rs  raw.rs  relate.rs  search.rs  update.rs  view.rs
tests/: fixture_tests.rs  integration_tests.rs  meta_tests.rs  state_resolution_props.rs
tests/fixtures/: error_invalid_input.json  error_not_found.json  issue_tool_33.json  list_tool_5.json  meta.json  search_scaffolding.json  viewer.json
wix/: main.wxs
