[package]
name = "lql"
version = "1.0.0"
edition = "2024"
description = "Linear Query Language — CLI for Linear optimized for LLM consumption"
license = "MIT"
repository = "https://github.com/frr149/lql"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
toon-format = { version = "0.4.4", default-features = false }

[dev-dependencies]
proptest = "1"
