[package]
name = "lql"
version = "1.2.1"
edition = "2024"
description = "Linear Query Language — CLI for Linear optimized for LLM consumption"
authors = ["Fernando Rodriguez Romero <fernando@frr.dev>"]
homepage = "https://frr.dev"
license = "MIT"
repository = "https://github.com/frr149/lql"

[package.metadata.wix]
upgrade-guid = "3B53BE09-F38D-44A2-ACEB-D034326FAAE7"
path-guid = "21CF6762-4B8E-4E2A-8B6C-02CC886B6C54"
license = false
eula = false

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
toon-format = { version = "0.4.4", default-features = false }

[dev-dependencies]
proptest = "1"
serial_test = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
